# RuthChess-6.0

./: Cargo.toml  README.md
benches/: bitboard_bench.rs  eval_bench.rs  position_bench.rs
src/: lib.rs  main.rs
src/board/: position.rs
src/eval/: eval_util.rs  evaluate.rs  king_safety.rs  material.rs  mobility.rs  mod.rs  pawns.rs  pst.rs  space.rs  threats.rs
src/movegen/: legal_moves.rs  magic.rs  moves.rs
src/search/: alphabeta.rs  alphabeta_yedek.rs  pruning.rs  time_management.rs
src/uci/: protocol.rs
