[package]
name = "RuthChessOVI"
version = "0.1.0"
edition = "2024"

[lib]
name = "RuthChessOVI" # Kütüphane adı
path = "src/lib.rs"  # Lib.rs yolu

[dev-dependencies]
criterion = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
target-cpu = "native"
debug = false


[profile.dev]
debug = false
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native", "-C", "opt-level=3"]

[dependencies]
arrayvec = "0.7.6"
bytemuck = "1.23.1"
chrono = "0.4.41"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
lazy_static = "1.5.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
rand = "0.9.1"
rayon = "1.10.0"

[[bench]]
name = "bitboard_bench"
harness = false
